# pmxbot

./: .gitignore  .hgignore  .hgtags  .travis.yml  CHANGES  CHANGES.rst  CONTRIBUTORS.txt  Dockerfile  Dockerfile.debug  Dockerfile.pmxbot  Dockerfile.slackbot  Home.wiki  LICENSE  MANIFEST.in  NEWS.rst  README  README.md  README.rst  config.yaml  conftest.py  crunchbot.py  home.md  intro.creole  jenkins  local.py  mypy.ini  pavement.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test requirements.txt  test.md  test.wiki  test.wiki.md  tox.ini
.github/: FUNDING.yml
deploy/init.d/: pmxbot  pmxbot-web
docs/: conf.py  index.rst
jenkins/: config.xml  run
newsfragments/: 108.feature.rst  111.feature.rst
pmxbot/: __init__.py  __main__.py  asciilogo.txt  botbase.py  buffer.py  channels.py  classutil.py  cleanhtml.py  commands.py  config_.py  core.py  dictlib.py  example usage.txt  http.py  irc.py  itertools.py  karma.py  klingonisms.txt  logging.py  murphy's laws.txt  notify.py  phrases.py  pmxbot.py  quotes.py  rolls.py  rss.py  saysomething.py  slack.py  social strategies.txt  stack.py  storage.py  system.py  timing.py  util.py  wolframalpha.py
pmxbot/popquotes/: __init__.py
pmxbot/routines/: migrate-all.py  rebuild-recent.py
pmxbot/testing/: fixtures.py
pmxbot/web/: __init__.py  __main__.py  viewer.py
pmxbot/web/templates/: base.html  day.html  help.html  karma.html  search.html
pmxbotweb/: pmxbotweb.py  viewer.py
pmxbotweb/templates/: base.html  channel.html  day.html  help.html  index.html  karma.html  search.html
routines/: dedup-karma.py  logs-context.py  migrate-all.py  rebuild-recent.py
slack/: README.md  config.yaml  crunchbot.yaml
slack/src/slackbot/pivotal/: __init__.py
slack/tests/: test_core.py  testconf.yaml
slack/tests/pivotal/: __init__.py  test_pivotal.py
src/: __init__.py
src/core/: handler.py
src/pivotal/: __init__.py  api.py
src/slackbot/core/: handler.py
tests/: __init__.py  conftest.py  requirements.txt  test_commands.py
tests/functional/: __init__.py  test_exceptions.py  test_logging.py  test_messages.py  test_regexps.py  test_rss.py  testconf.yaml
tests/functional/plugins/: pmxbot_test_commands.py
tests/functional/plugins/pmxbot_test_commands.egg-info/: entry_points.txt
tests/functional/tclircd/: README  ircd.tcl
tests/pivotal/: test_pivotal.py
tests/pivotal/functional/: __init__.py  test_pivotal.py
tests/unit/: conftest.py  pmxbot.sqlite  test_commands.py  test_config_mod.py  test_core.py  test_handlers.py  test_karma.py  test_logging.py  test_popquotes.py  test_quotes.py  test_rss.py  test_saysomething.py  test_slack.py  test_stack.py  test_util.py  test_viewer.py  testconf.yaml
