[metadata]
name = pmxbot
author = YouGov, Plc.
author_email = dev@yougov.com
maintainer = Jason R. Coombs
maintainer_email = jaraco@jaraco.com
description = IRC bot - full featured, yet extensible and customizable
long_description = file:README.rst
url = https://github.com/pmxbot/pmxbot
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Topic :: Communications :: Chat :: Internet Relay Chat
	Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.8
install_requires =

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 6

	# local
