[metadata]
name = pmxbot
author = YouGov, Plc.
author_email = dev@yougov.com
maintainer = Jason R. Coombs
maintainer_email = jaraco@jaraco.com
description = IRC bot - full featured, yet extensible and customizable
long_description = file:README.rst
url = https://github.com/pmxbot/pmxbot
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Topic :: Communications :: Chat :: Internet Relay Chat
	Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[options]
include_package_data = true
python_requires = >=3.8
install_requires =
	requests
	pyyaml
	feedparser
	pytz
	beautifulsoup4
	wordnik-py3
	more_itertools
	tempora
	jaraco.collections>=3.4
	jaraco.itertools
	jaraco.context
	jaraco.classes
	jaraco.functools
	inflect
	python-dateutil
	jaraco.mongodb>=7.3.1
	importlib_metadata>=3.6
	importlib_resources>=1.3
	# required by pymongo to honor mongodb+srv scheme
	dnspython

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-cov
	pytest-mypy
	pytest-enabler >= 2.2
	pytest-ruff >= 0.2.1

	# local
	more_itertools
	jaraco.mongodb
	setuptools_scm
	types-requests
	types-python-dateutil
	types-pytz
	types-pyyaml
	jaraco.test >= 5.3

docs =
	# upstream
	sphinx >= 3.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint

	# tidelift
	jaraco.tidelift >= 1.4

	# local

mongodb =
	pymongo>=3

viewer =
	cherrypy>=3.2.3
	jinja2>=2.11.2

slack =
	slack_sdk

irc =
	irc >=15.0

[options.entry_points]
console_scripts =
	pmxbot=pmxbot.core:run
	pmxbotweb=pmxbot.web.viewer:run

pmxbot_handlers =
	pmxbot logging = pmxbot.logging:Logger.initialize
	pmxbot karma = pmxbot.karma:Karma.initialize
	pmxbot quotes = pmxbot.quotes:Quotes.initialize
	pmxbot core commands = pmxbot.commands
	pmxbot notifier = pmxbot.notify:Notify.init
	pmxbot stack = pmxbot.stack:Stack.init
	pmxbot rolls = pmxbot.rolls:ParticipantLogger.initialize
	pmxbot config = pmxbot.config_
	pmxbot system commands = pmxbot.system

pytest11 =
	pmxbot core = pmxbot.testing.fixtures
